--- a/app/Rmd/report_planning_FR.Rmd
+++ b/app/Rmd/report_planning_FR.Rmd
@@ -67,8 +67,8 @@ writeLines(noquote(mpa_rr$text))
 #### ***Area-specific Draft Conservation Network Design search results ***
 
 ```{r MPA-load-data, results='asis'}
-mpaCols <- c("darkorchid", "lawngreen", "dodgerblue2", "cyan3")
-mpaAlphas <- c(0.5, 0.5, 0.5, 0.5)
+mpaCols <- c("dodgerblue3", "red", "darkorchid", "lawngreen",  "cyan3")
+mpaAlphas <- c(0.5, 0.5, 0.5, 0.5, 0.5)
 names(mpaCols) <- levels(as.factor(mpa_rr$data_sf[[mpa_rr$attribute]]))
 names(mpaAlphas) <- levels(as.factor(mpa_rr$data_sf[[mpa_rr$attribute]]))
 
@@ -90,15 +90,14 @@ mpaCheckOuput <- if(!is.null(mpaClipped$studyData)){
 writeLines(mpaCheckOuput)
 ```
 
-```{r mpa-region-plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none.Map of the Draft Conservation Network Design for the Scotian Shelf-Bay of Fundy Bioregion. '}
+```{r mpa-region-plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none.Map of the Draft Conservation Network Design for the Scotian Shelf-Bay of Fundy Bioregion. Boundaries of the proposed new sites are preliminary and subject to change following engagementa and consultation. '}
 if (!is.null(mpaClipped$regionData)){
-  mpaLabels <- filter(st_centroid(mpaClipped$regionData), Id > 0) %>% dplyr::select(c("Id"))
-  plot_rr_sf(regionMap, mpaClipped$regionData, mpa_rr$attribute, colorMap = mpaCols,
-                            labelData = mpaLabels, labelAttribute = "Id", alphaMap = mpaAlphas)
+  plot_rr_sf(regionMap, mpaClipped$regionData, mpa_rr$attribute, outlines=FALSE, colorMap = mpaCols,
+                            alphaMap = mpaAlphas)
 }
 ```
 
-```{r mpa-area-plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map of the Draft Conservation Network Design in the search area defined by the user (red outline).'}
+```{r mpa-area-plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map of the Draft Conservation Network Design in the search area defined by the user (red outline). Boundaries of the proposed new sites are preliminary and subject to change following engagementa and consultation.'}
 if(!is.null(mpaClipped$studyData)){
   mpaStudyLabels <- filter(st_centroid(mpaClipped$mapData), Id > 0) %>% dplyr::select(c("Id"))
 
