add date check from existing rdata to avoid redownloading data

--- a/app/Rmd/report_planning_EN.Rmd
+++ b/app/Rmd/report_planning_EN.Rmd
@@ -1,6 +1,5 @@
 ``` {r load-planning-data, echo=FALSE}
-
-filesLoaded <- load_rdata(c("EBSA_rr"), "MAR", globalenv())
+filesLoaded <- load_rdata(c("EBSA_rr"), "MAR")
 
 ```
 
