--- a/app/Rmd/report_planning_EN.Rmd
+++ b/app/Rmd/report_planning_EN.Rmd
@@ -1,23 +1,21 @@
 ``` {r load-planning-data, echo=FALSE}
-filesLoaded <- load_rdata(c("EBSA_rr"), "MAR")
+filesLoaded <- load_rdata(c("EBSA_rr", "conservationSites_rr"), "MAR", env = environment())
 
 ```
 
 
 ## **AREAS DESIGNATED FOR SPATIAL PLANNING**
 
-This section describes information relevant to spatial planning from a variety of sources. Area-specific outputs are provided in sub-sections labelled according to the data source. Descriptions of the source data and appropriate references and contacts are provided at the beginning of each sub-section.
+This section describes information relevant to spatial planning from a variety of sources. Area-specific outputs are provided in sub-sections labeled according to the data source. Descriptions of the source data and appropriate references and contacts are provided at the beginning of each sub-section.
 
 <!-- ### **Ecologically and Biologically Significant Areas (EBSA)** -->
 
 ### **`r EBSA_rr$title$en` **
 
-Contact: [carissa.philippe\@dfo-mpo.gc.ca](mailto:carissa.philippe@dfo-mpo.gc.ca){.email}\
-Last retrieved on: January 21, 2021 from Open Data\
-<https://open.canada.ca/data/en/dataset/d2d6057f-d7c4-45d9-9fd9-0a58370577e0>\
-Quality Tier: High\
-Security level: none\
-Data use constraints: none\
+```{r EBSA-meta, results='asis'}
+write_meta(EBSA_rr, "en")
+
+```
 EBSA Story Map: <https://gisp.dfo-mpo.gc.ca/portal/apps/MapJournal/index.html?appid=b91f85de60f44a7b90633e4b43e3916a>
 
 Dataset description from the Open Data record (DFO 2016a):
@@ -67,7 +65,7 @@ if(!is.null(EBSAoutput$studyData)){
 ### **Draft Conservation Network Design** {#MPA-section}
 
 ```{r MPA-section, results='asis'}
-write_meta(conservationSites_rr)
+write_meta(conservationSites_rr, "en")
 # writeLines(noquote(conservationSites_rr$text))
 
 ```
