--- a/app/Rmd/report_planning_FR.Rmd
+++ b/app/Rmd/report_planning_FR.Rmd
@@ -1,26 +1,32 @@
+``` {r load-planning-data, echo=FALSE}
+filesLoaded <- load_rdata(c("EBSA_rr", "conservationSites_rr"), "MAR", env = environment())
+
+```
+
 ## **ZONES DÉSIGNÉES POUR LA PLANIFICATION SPATIALE**  
 
-### **Zones d’importance écologique et biologique (ZIEB)**  
-Personne-ressource: <carissa.philippe@dfo-mpo.gc.ca>  
-Consulté le : 21 janvier 2021 sur le Portail de données ouvertes
-<https://ouvert.canada.ca/data/fr/dataset/d2d6057f-d7c4-45d9-9fd9-0a58370577e0>  
-Niveau de qualité : Élevée  
-Niveau de sécurité : Aucun  
 
-Description de l’ensemble de données (tirée du dossier des données ouvertes): Les zones d'importance écologique et biologique (ZIEB) sont des zones au sein des eaux océaniques canadiennes que des évaluations scientifiques officielles ont désignées comme ayant une importance écologique et biologique particulière par rapport à l'écosystème marin environnant. Le fait qu'une zone n'ait pas été désignée comme ayant une importance écologique et biologique ne signifie pas pour autant qu'elle n'a pas une importance écologique. Toutes les zones assument des fonctions écologiques dans une certaine mesure et exigent une gestion durable. Les zones désignées comme des ZIEB devraient plutôt être vues comme des zones extrêmement importantes, où les connaissances, les législateurs et les utilisateurs des ressources marines doivent exercer une grande prudence eu égard au risque, afin de veiller à ce que les écosystèmes restent sains et productifs. Les renseignements relatifs à ces aires sont utilisés pour appuyer la planification marine, notamment l'évaluation environnementale et la mise en place d'activités marines:
+<!-- **Zones d’importance écologique et biologique (ZIEB)**  -->
 
-- En informant et guidant les évaluations environnementales régionales ou spécifique à un projet
-- En informant et guidant les industries et les législateurs pour une planification et une conduite d'activités optimale, par exemple: les zones d'importance écologique et biologique ont été prises en compte et mentionnées dans les évaluations portant sur le pétrole et le gaz.
-- Des renseignements sur les ZIEB ont été fournis aux promoteurs de projets de câbles sous-marins, afin de les aider à en déterminer les tracés.
-- En information et en guidant le processus de gestion intégrée des océans dans cinq zones étendues de gestion des océans et 12 biorégions marines.
-- En servant de fondement pour la détermination des zones d'intérêt et des zones de protection marines (de manière individuelle et dans le cadre de la planification des réseaux biorégionaux de zones de protection marines).
+### **`r EBSA_rr$title$fr` **
+
+```{r EBSA-meta, results='asis'}
+write_meta(EBSA_rr, "FR")
+```
+Histoir ZIEB: <https://gisp.dfo-mpo.gc.ca/portal/apps/MapJournal/index.html?appid=b91f85de60f44a7b90633e4b43e3916a>
+
+Description de l’ensemble de données (tirée du dossier des données ouvertes):
+```{r EBSA-text, results='asis'}
+writeLines(noquote(EBSA_rr$text$fr))
+
+```
 
 #### ***Résultats de la recherche des ZIEB par zone***  
 
 *
 ```{r EBSA-results, echo=FALSE, results='asis'}
 #function for overlap
-EBSAoutput <- master_intersect(EBSA_sf, mapDataList, getRegion=TRUE)
+EBSAoutput <- master_intersect(EBSA_rr$data_sf, mapDataList, getRegion=TRUE)
 ```
 
 ```{r EBSA-check, echo=FALSE, results='asis'}
@@ -44,21 +50,20 @@ EBSA_report(EBSAoutput$studyData, lang="FR")
 
 ```{r EBSA-region-plot, fig.height=8, fig.width=11, fig.cap= 'Niveau de qualité : Élevée. Niveau de sécurité : Aucun. Carte montrant les zones d’importance écologique et biologique (ZIEB) par rapport à la zone de recherche définie par l’utilisateur (entourée de rouge).'}
 if (!is.null(EBSAoutput$regionData)){
-  plot_rr_sf(regionMap, EBSAoutput$regionData, "NONE")
+  plot_rr_sf(regionMap, EBSAoutput$regionData, EBSA_rr$attribute)
 }
 ```
 
 ```{r EBSA-area-plot, fig.height=8, fig.width=11, fig.cap= 'Niveau de qualité : Élevée. Niveau de sécurité : Aucun. Carte montrant les zones d’importance écologique et biologique (ZIEB) dans la zone de recherche définie par l’utilisateur (entourée de rouge).'}
 if(!is.null(EBSAoutput$studyData)){
-  plot_rr_sf(areaMap, EBSAoutput$mapData, "NONE")
+  plot_rr_sf(areaMap, EBSAoutput$mapData, EBSA_rr$attribute)
 }
 ```
 
 ### **Draft Conservation Network Design: existing and potential future marine protected areas (MPAs) and other spatial conservation areas** {#MPA-section}
 
 ```{r MPA-section, results='asis'}
-write_meta(conservationSites_rr)
-# writeLines(noquote(conservationSites_rr$text))
+write_meta(conservationSites_rr, "FR")
 
 ```
 A key milestone and focal point for the planning process is the Draft Conservation Network Design, which is a map of both existing and potential future marine protected areas (MPAs) and other spatial conservation areas that would contribute to the long-term conservation of marine biodiversity in the bioregion. The Draft Design was originally drafted in 2017 following an extensive spatial conservation analysis led by Fisheries and Oceans Canada (DFO). While some discussion on the Draft Design has been ongoing with our provincial and First Nations partners since that time, events such as the COVID-19 pandemic have limited the scope and pace of the overall engagement process.
